# async-document-processing

./: .dockerignore  .env.example  .gitignore  Dockerfile.prod  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 14f4a821db8c_initial_schema.py
app/: config.py  exceptions.py  main.py
app/auth/: backend.py  router.py  routes.py
app/tests/: helpers.py  test_e2e.py  test_exceptions.py  test_security.py
app/users/: dependencies.py  models.py  router.py  routes.py  schemas.py
app/users/errors/: handlers.py
app/users/tests/: test_users_admin_api.py  test_users_me_api.py
bruno/: opencollection.yml
bruno/environments/: local.yml  production.yml
docs/: commands.md  conventions.md
docs/architecture/: document-ingestion.md
docs/config/auth/: README.md  implementation.md  rate-limiting.md  rbac.md  testing.md
docs/config/db/: async-sqlalchemy-alembic.md  troubleshooting.md
docs/config/db/neon/: README.md
docs/config/tests/: speed.md
docs/steps/: README.md
